discussion/kv_engine/172221/172221_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51413: Create MockCouchKVStore in replaceCouchKVStore

It's test code so the greater flexibility is useful.

Change-Id: Ib76d1c35b85db9d9e725b2fde6bbd11f42824ae1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-03-14 18:52:51.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-14 19:31:58.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16002/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16002/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16002/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44442/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [25/93]: test producer disk backfill buffer limits...Exceeded maximum wait time of 60000000us waiting for stat "ep_items_rm_from_checkpoints" to be 3 (last value:4) - aborting.
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44442/ )

Timeout of a CTest test 422/422 Test #203: ep-engine_ep_unit_tests.EphemeralOrPersistent/DurabilityTest ..................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44442/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14921/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/tests/mock/mock_couch_kvstore.h b/engines/ep/tests/mock/mock_couch_kvstore.h
index 3606015da..9f51fa895 100644
--- a/engines/ep/tests/mock/mock_couch_kvstore.h
+++ b/engines/ep/tests/mock/mock_couch_kvstore.h
@@ -10,8 +10,8 @@
  */
 #pragma once
 
-#include &lt;kvstore/couch-kvstore/couch-kvstore-db-holder.h&gt;
 #include &quot;kvstore/couch-kvstore/couch-kvstore.h&quot;
+#include &lt;kvstore/couch-kvstore/couch-kvstore-db-holder.h&gt;
 
 class MockCouchRequest : public CouchRequest {
 public:
@@ -67,8 +67,8 @@ public:
         : CouchKVStore(config) {
     }
 
-    MockCouchKVStore(const CouchKVStoreConfig&amp; config,
-                     FileOpsInterface&amp; ops) : CouchKVStore(config, ops) {
+    MockCouchKVStore(const CouchKVStoreConfig&amp; config, FileOpsInterface&amp; ops)
+        : CouchKVStore(config, ops) {
     }
 
     /// Read-Only constructor where we are given a RevisionMap

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14921/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18097/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [25/93]: test producer disk backfill buffer limits...Exceeded maximum wait time of 60000000us waiting for stat "ep_items_rm_from_checkpoints" to be 3 (last value:4) - aborting.
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18097/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18097/ )

Test exceeded the timeout:
[2022-03-14T19:13:57.320Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18097/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16840/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [25/93]: test producer disk backfill buffer limits...Exceeded maximum wait time of 60000000us waiting for stat "ep_items_rm_from_checkpoints" to be 3 (last value:4) - aborting.
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16840/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17770/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [25/93]: test producer disk backfill buffer limits...Exceeded maximum wait time of 60000000us waiting for stat "ep_items_rm_from_checkpoints" to be 3 (last value:4) - aborting.
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17770/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17770/ )

Test exceeded the timeout:
[2022-03-14T19:20:46.181Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17770/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18802/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [25/93]: test producer disk backfill buffer limits...Exceeded maximum wait time of 60000000us waiting for stat "ep_items_rm_from_checkpoints" to be 3 (last value:4) - aborting.
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18802/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5717/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [25/93]: test producer disk backfill buffer limits...Exceeded maximum wait time of 60000000us waiting for stat "ep_items_rm_from_checkpoints" to be 3 (last value:4) - aborting.
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5717/ )

Test exceeded the timeout:
[2022-03-14T19:11:36.360Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5717/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26177/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37417/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5658/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
